--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "hyperf/model-cache": "~3.0.0",
         "hyperf/process": "~3.0.0",
         "hyperf/redis": "~3.0.0",
-        "hyperf/validation": "^3.0"
+        "hyperf/validation": "^3.0",
+        "lcobucci/jwt": "^4.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
