--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "hyperf/logger": "~3.0.0",
         "hyperf/memory": "~3.0.0",
         "hyperf/model-cache": "~3.0.0",
+        "hyperf/paginator": "^3.0",
         "hyperf/process": "~3.0.0",
         "hyperf/redis": "~3.0.0",
         "hyperf/validation": "^3.0",
