--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "hyperf/process": "~3.0.0",
         "hyperf/redis": "~3.0.0",
         "hyperf/validation": "^3.0",
+        "hyperf/websocket-server": "^3.0",
         "lcobucci/jwt": "^4.3"
     },
     "require-dev": {
