--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "raylin666/php-hy-framework",
+    "name": "raylin666/php-micro",
     "type": "project",
     "keywords": [
         "php",
