--- a/app/Api/config.json
+++ b/app/Api/config.json
@@ -1,7 +1,7 @@
 {
     "name": "Api",
     "label": "",
-    "description": "",
+    "description": "前台系统服务",
     "installed": true,
     "enabled": true,
     "version": "1.0.0"
